# clap-completions

./: Cargo.toml
src/: lib.rs  nu.rs
tests/: crates.rs  example_app_completions.rs
tests/shared/: mod.rs
tests/snapshots/: crates__addr2line__help.snap  crates__addr2line__nu.snap  crates__addr2line__nu__help.snap  crates__bindgen__help.snap  crates__bindgen__nu.snap  crates__bindgen__nu__help.snap  crates__carg-add__nu.snap  crates__carg-add__nu__help.snap  crates__cargo-add__help.snap  crates__cargo-add__nu.snap  crates__cargo-add__nu__help.snap  example_app_completions__help__aliases.snap  example_app_completions__help__basic.snap  example_app_completions__help__feature-sample.snap  example_app_completions__help__quoting.snap  example_app_completions__help__special-commands.snap  example_app_completions__help__sub-subcommands.snap  example_app_completions__help__value-hint.snap  example_app_completions__nu__aliases.snap  example_app_completions__nu__basic.snap  example_app_completions__nu__feature-sample.snap  example_app_completions__nu__help__aliases.snap  example_app_completions__nu__help__basic.snap  example_app_completions__nu__help__feature-sample.snap  example_app_completions__nu__help__quoting.snap  example_app_completions__nu__help__special-commands.snap  example_app_completions__nu__help__sub-subcommands.snap  example_app_completions__nu__help__value-hint.snap  example_app_completions__nu__quoting.snap  example_app_completions__nu__special-commands.snap  example_app_completions__nu__sub-subcommands.snap  example_app_completions__nu__value-hint.snap
